[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ait"
version = "0.0.1"
authors = [
    { name = "Tao Jing", email = "jingt20@mails.tsinghua.edu.cn" },
    { name = "Tao Jing", email = "634790985@qq.com" },
]
description = "astro image toolkits"
dependencies = [
    "numpy",
    "joblib",
    "astropy",
    "pandas",
    "scikit-image",
    "reproject",
    "h5py",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
